--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,7 +7,10 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+:root{
+  --font-family-sans-serif: 'TTCommons', sans-serif;
 
+}
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -22,6 +25,7 @@ html {
 
 body {
   margin: 0;
+  font-family: 'TTCommons', sans-serif;
 }
 
 /**
