--- a/website/public/css/main.css
+++ b/website/public/css/main.css
@@ -63,6 +63,11 @@
   border-bottom: 2px solid rgb(242, 245, 250);
 }
 
+.text-header-modal{
+  font-size: 2.5vh;
+  font-weight: bold;
+}
+
 .carrousel_bg_inactive {
   background-color: #dde3f0;
 }
@@ -197,4 +202,6 @@
     margin-top: -16rem !important;
   }
 }
+
+
 
