--- a/website/public/css/main.css
+++ b/website/public/css/main.css
@@ -184,6 +184,12 @@
 .bg-h {
   height: 15vh;
 }
+
+.line{
+  border-bottom-style: solid;
+  border-color: #DDE3F0;
+  border-width: 1px;
+}
 @media only screen and (max-width: 575px) {
   .bg-h {
     height: 7vh;
