--- a/website/public/css/main.css
+++ b/website/public/css/main.css
@@ -351,7 +351,10 @@ body{
   .profile-card .card-img{
     max-width: 200px;
   }
-
+  .navbar-items{
+    width: 100%;
+    justify-content: center;
+  }
 }
 @media only screen and (max-width: 500px){
   .container-login::before{
