--- a/website/public/css/main.css
+++ b/website/public/css/main.css
@@ -1,6 +1,7 @@
 /*BASE STYLES*/
-body{
-  font-family: 'TTCommons',system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
+body {
+  font-family: "TTCommons", system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
+    Cantarell, Noto Sans, sans-serif;
   font-size: 19px;
   line-height: 24px;
   color: #262b33;
@@ -9,7 +10,7 @@ body{
 }
 /*END BASE STYLES*/
 
-.header-login{
+.header-login {
   display: flex;
   align-items: center;
   width: 100%;
@@ -17,13 +18,13 @@ body{
   padding: 0px 32px;
 }
 
-.container-login{
+.container-login {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   position: relative;
 }
-.container-login::before{
+.container-login::before {
   content: "";
   display: block;
   position: absolute;
@@ -37,10 +38,10 @@ body{
   background-repeat: no-repeat;
   background-position: 50% 0%;
 }
-.container-login--recover::before{
+.container-login--recover::before {
   background-image: url(../images/footer-recover.svg);
 }
-.container-login-form{
+.container-login-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,7 +51,7 @@ body{
   padding: 40px 32px 95px;
 }
 
-.container-login-form-inner{
+.container-login-form-inner {
   width: 100%;
   max-width: 400px;
 }
@@ -88,7 +89,7 @@ body{
 .text-regular {
   font-size: inherit;
 }
-.font-size-regular{
+.font-size-regular {
   font-size: 19px !important;
 }
 .text-help {
@@ -220,20 +221,20 @@ body{
 .button:focus {
   outline: none;
 }
-.button--small{
+.button--small {
   font-size: 16px;
   padding: 8px 10px;
 }
-.button--white{
+.button--white {
   background-color: #fff;
-  border: 1px solid #DDE3F0;
-  color: #262B33;
+  border: 1px solid #dde3f0;
+  color: #262b33;
 }
-.button--white:hover{
+.button--white:hover {
   background-color: #fff;
-  color: #262B33;
+  color: #262b33;
 }
-.button-profile{
+.button-profile {
   position: absolute;
   right: 0;
   bottom: 15px;
@@ -255,6 +256,16 @@ body{
   border-radius: 10px;
   transition: background-color 0.1s ease 0s, box-shadow 0.1s ease 0s;
   border-width: 0px;
+}
+
+.active-stepper {
+  background-color: #2196f3;
+  color: white;
+}
+
+.inactive-stepper {
+  background-color: #d1d6e2;
+  color: #6c757d;
 }
 
 .mt-6 {
@@ -279,91 +290,126 @@ body{
   line-height: 1rem !important;
 }
 
-.end{
+.end {
   height: 50px !important;
 }
 
-.my-bar{
+.my-bar {
   width: 5%;
-	background-color: #f34213;
+  background-color: #f34213;
 }
 
-.app{
-  background-color: #F2F5FA;
+.app {
+  background-color: #f2f5fa;
 }
-.dropdown-nav-options.show >a {
+.dropdown-nav-options.show > a {
   color: #98a1b3;
 }
-.color-text{
+.color-text {
   color: #262b33;
 }
-.title-page{
+.title-page {
   font-size: 32px;
 }
-.nav-profiles{
+.nav-profiles {
   position: relative;
 }
-.nav-profiles .profile-option{
+.nav-profiles .profile-option {
   font-size: 19px;
   color: #98a1b3;
 }
-.nav-profiles .profile-option.active{
-  color: #262B33 !important;
-  border-bottom: 3px solid #2F8DEB;
+.nav-profiles .profile-option.active {
+  color: #262b33 !important;
+  border-bottom: 3px solid #2f8deb;
 }
-.profile-card{
+.profile-card {
   max-width: 540px;
   background-color: inherit;
   border: 0;
 }
-.profile-card .card-text{
+.profile-card .card-text {
   font-size: 16px;
-  color: #98A1B3;
+  color: #98a1b3;
 }
-.profile-more-options{
+.profile-more-options {
   font-size: 19px;
 }
-@media only screen and (max-width: 991px){
-  .container-login::before{
+
+[type="date"] {
+  background: #fff
+    url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)
+    97% 50% no-repeat;
+}
+[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
+.input-date-picker {
+  padding-top: 8.5px;
+  padding-bottom: 8.5px;
+  padding-left: 11px;
+  padding-right: 11px;
+  width: 100%;
+  display: block;
+  caret-color: rgb(33, 150, 243);
+  background-color: rgb(242, 245, 250);
+  color: rgb(38, 43, 51);
+  pointer-events: unset;
+  border-radius: 3px;
+  outline: none;
+  border-width: 0px;
+  border-style: initial;
+  border-color: initial;
+  border-image: initial;
+  transition: color 0.1s ease 0s;
+  border-bottom: 2px solid rgb(242, 245, 250);
+  font-size: inherit;
+}
+
+@media only screen and (max-width: 991px) {
+  .container-login::before {
     height: 220px;
   }
 }
-@media only screen and (max-width: 767px){
-  .container-login::before{
+@media only screen and (max-width: 767px) {
+  .container-login::before {
     height: 180px;
     background-position: 60% 0%;
   }
-  .container-login-form{
+  .container-login-form {
     padding-bottom: 190px;
   }
-  .text-title{
+  .text-title {
     font-size: 38px;
     line-height: 40px;
   }
-  .nav-profiles .profile-option{
+  .nav-profiles .profile-option {
     width: 50%;
     text-align: center;
     margin: 0;
     white-space: normal;
   }
 }
-@media only screen and (max-width: 575px){
-  .profile-card .card-img{
+@media only screen and (max-width: 575px) {
+  .profile-card .card-img {
     max-width: 200px;
   }
-  .navbar-items{
+  .navbar-items {
     width: 100%;
     justify-content: center;
   }
 }
-@media only screen and (max-width: 500px){
-  .container-login::before{
+@media only screen and (max-width: 500px) {
+  .container-login::before {
     display: none;
   }
-  .container-login-form{
+  .container-login-form {
     padding: 40px 20px 60px;
   }
-  .container-login-form > .container{
+  .container-login-form > .container {
     padding: 0;
   }
 }
