Actualizacion de edit Profile

--- a/website/public/resources/css/main.css
+++ b/website/public/resources/css/main.css
@@ -718,6 +718,10 @@ select {
     font-size: 50px;
 }
 
+[v-cloak] {
+    display: none;
+}
+
 @-moz-keyframes spin {
     100% {
         -moz-transform: rotate(360deg);
