--- a/website/public/resources/css/main.css
+++ b/website/public/resources/css/main.css
@@ -154,6 +154,9 @@ body {
 .text-settings-link-on:hover,
 .text-settings-link-on:focus {
     text-decoration: none !important;
+    background: transparent;
+    outline: 0;
+    border: 0;
 }
 
 .text-settings-link-on:hover {
