--- a/website/public/resources/css/main.css
+++ b/website/public/resources/css/main.css
@@ -732,6 +732,7 @@ select {
     justify-content: center;
 }
 
+
 .primary-cl {
     color: #2198F4;
     font-size: 50px;
@@ -739,6 +740,20 @@ select {
 
 [v-cloak] {
     display: none;
+}
+
+.sharedProfileUser {
+    border-bottom-style: solid;
+    border-color: #dde3f0;
+    border-width: 1px;
+}
+
+.sharedProfileUser:hover{
+    background-color: rgb(242, 245, 250);
+}
+
+.sharedProfileUser p{
+    margin-bottom: 0;
 }
 
 @-moz-keyframes spin {
